testing video tag

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+ <video width="640" height="480" controls>
+  <source src="media/MVI_0406.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video> 
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/najoshi/pipresents-next-digital-photo-frame">Pipresents-next-digital-photo-frame</a> is maintained by <a href="https://github.com/najoshi">najoshi</a>.</span>
