--- a/index.html
+++ b/index.html
@@ -39,6 +39,21 @@
 Your browser does not support the video tag.
 </video> 
 
+<img src="media/IMG_0392.resized.JPG">
+<img src="media/IMG_0393.resized.JPG">
+<img src="media/IMG_0394.resized.JPG">
+<img src="media/IMG_0395.resized.JPG">
+<img src="media/IMG_0396.resized.JPG">
+<img src="media/IMG_0397.resized.JPG">
+<img src="media/IMG_0398.resized.JPG">
+<img src="media/IMG_0399.resized.JPG">
+<img src="media/IMG_0400.resized.JPG">
+<img src="media/IMG_0401.resized.JPG">
+<img src="media/IMG_0402.resized.JPG">
+<img src="media/IMG_0403.resized.JPG">
+<img src="media/IMG_0404.resized.JPG">
+<img src="media/IMG_0405.resized.JPG">
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/najoshi/pipresents-next-digital-photo-frame">Pipresents-next-digital-photo-frame</a> is maintained by <a href="https://github.com/najoshi">najoshi</a>.</span>
 
