--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@ Your browser does not support the video tag.
 <img src="media/IMG_0403.resized.JPG">
 <img src="media/IMG_0404.resized.JPG">
 <img src="media/IMG_0405.resized.JPG">
+<img src="media/IMG_0408.resized.JPG">
+<img src="media/IMG_0409.resized.JPG">
+<img src="media/IMG_0411.resized.JPG">
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/najoshi/pipresents-next-digital-photo-frame">Pipresents-next-digital-photo-frame</a> is maintained by <a href="https://github.com/najoshi">najoshi</a>.</span>
