--- a/index.html
+++ b/index.html
@@ -13,31 +13,35 @@
     <section class="page-header">
       <h1 class="project-name">Pipresents-next-digital-photo-frame</h1>
       <h2 class="project-tagline"> Modifying Pi Presents-next for use in a digital photo frame project</h2>
-      <a href="https://github.com/najoshi/pipresents-next-digital-photo-frame" class="btn">View on GitHub</a>
-      <a href="https://github.com/najoshi/pipresents-next-digital-photo-frame/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/najoshi/pipresents-next-digital-photo-frame/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<h4>I wanted to make a digital photo frame that:</h4>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<ul>
+<li>Would show both pictures and video with sound</li>
+<li>Would have high storage capacity</li>
+<li>Would shuffle the pictures/videos so they weren't in order</li>
+<li>Would have buttons to pause and go forwards/backwards through the slideshow</li>
+<li>Would have the capability of annotating the pictures and video with text</li>
+<li>Would have a motion sensor</li>
+<li>Would be large in size, i.e. a large monitor</li>
+<li>Would all fit in one package to mount on the wall, i.e. storage, the Pi, buttons, the monitor, etc.</li>
+<li>Would be able to handle tens of thousands of pictures and video</li>
+<li>Would not need soldering</li>
+</ul>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h4>Video of media frame in action:</h4>
 
  <video width="640" height="480" controls>
   <source src="media/MVI_0406.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video> 
+
+
+<h2>INSTRUCTIONS</h2>
 
 <img src="media/IMG_0392.resized.JPG">
 <img src="media/IMG_0393.resized.JPG">
