--- a/index.html
+++ b/index.html
@@ -41,7 +41,29 @@ Your browser does not support the video tag.
 </video> 
 
 
-<h2>INSTRUCTIONS</h2>
+<h1>INSTRUCTIONS</h1>
+
+<h3>Things you'll need:</h3>
+<ul>
+<li><a href="https://www.adafruit.com/products/3055">Raspberry PI</a> (I originally did this project with a Pi 2, but it should work just the same with a Pi 3.</li>
+<li><a href="https://www.adafruit.com/products/2767">SD card with Raspbian</a></li>
+<li><a href="https://www.adafruit.com/products/608">HDMI cable</a></li>
+<li><a href="https://www.adafruit.com/products/189">PIR motion sensor</a></li>
+<li><a href="https://www.adafruit.com/products/1950">Female-to-Female Jumper Wires</a></li>
+<li><a href="https://www.adafruit.com/products/1954">Female-to-Male Jumper Wires</a></li>
+<li><a href="https://www.adafruit.com/products/64">Half size breadboard</a></li>
+<li><a href="https://www.sparkfun.com/products/9190">3 pushbutton switches</a></li>
+<li><a href="https://www.adafruit.com/product/1995">5V 2.4A MicroUSB power supply</a></li>
+<li><a href="https://www.adafruit.com/products/1998">Raspberry Pi enclosure</a></li>
+<li><a href="http://www.amazon.com/dp/B00EZSUVHK/ref=pe_385040_121528360_TE_dp_1">24" HD Viewsonic LCD monitor with sound and VESA compliant</a></li>
+<li><a href="http://www.amazon.com/Universal-LCD-F-1-Insignia-Panasonic-Magnavox/dp/B00P32KQXG/ref=sr_1_4">Universal Flat Wall Mount for VESA monitor</a></li>
+<li><a href="www.amazon.com/VELCRO-Sticky-Back-Strips-Black/dp/B000TGSPV6/ref=sr_1_2">Velcro strips</a></li>
+<li><a href="http://www.amazon.com/Seagate-Portable-External-Storage-STDR1000100/dp/B00H4XH5FY/ref=sr_1_1">External Hard Drive</a></li>
+<li>Hot Glue Gun</li>
+<li>Flexible semi-rigid rubber-coated wire (for mounting PIR sensor)</li>
+<li>Possibly a mircoUSB extension cord if the power supply won't reach</li>
+</ul>
+
 
 <img src="media/IMG_0392.resized.JPG">
 <img src="media/IMG_0393.resized.JPG">
