--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Your browser does not support the video tag.
 <li><a href="https://www.adafruit.com/products/608">HDMI cable</a></li>
 <li><a href="https://www.adafruit.com/products/189">PIR motion sensor</a></li>
 <li><a href="https://www.adafruit.com/products/1950">Female-to-Female Jumper Wires</a></li>
-<li><a href="https://www.adafruit.com/products/1954">Female-to-Male Jumper Wires</a></li>
+<li><a href="https://www.adafruit.com/products/1952">Female-to-Male Jumper Wires</a></li>
 <li><a href="https://www.adafruit.com/products/64">Half size breadboard</a></li>
 <li><a href="https://www.sparkfun.com/products/9190">3 pushbutton switches</a></li>
 <li><a href="https://www.adafruit.com/product/1995">5V 2.4A MicroUSB power supply</a></li>
@@ -59,6 +59,8 @@ Your browser does not support the video tag.
 <li><a href="http://www.amazon.com/Universal-LCD-F-1-Insignia-Panasonic-Magnavox/dp/B00P32KQXG/ref=sr_1_4">Universal Flat Wall Mount for VESA monitor</a></li>
 <li><a href="http://www.amazon.com/VELCRO-Sticky-Back-Strips-Black/dp/B000TGSPV6/ref=sr_1_2">Velcro strips</a></li>
 <li><a href="http://www.amazon.com/Seagate-Portable-External-Storage-STDR1000100/dp/B00H4XH5FY/ref=sr_1_1">External Hard Drive</a></li>
+<li><a href="https://www.sparkfun.com/products/8837">Rocker switch</a></li>
+<li><a href="http://tinkersphere.com/buttons-switches/289-toggle-slide-switch-breadboard-perfboard-compatible-spdt.html">Toggle slide switch</a></li>
 <li>Hot Glue Gun</li>
 <li>Flexible semi-rigid rubber-coated wire (for mounting PIR sensor)</li>
 <li>Possibly a mircoUSB extension cord if the power supply won't reach</li>
