--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@ Your browser does not support the video tag.
 <li>Possibly a mircoUSB extension cord if the power supply won't reach</li>
 </ul>
 
+<h2><u>Step 1</u></h2>
+
+Find a spot for your digital media frame to eventually go. You'll want a space that is centrally located which gets high traffic and visibility and where you can mount it on a stud or strut (basically into wood, not drywall). And, of course, it will need access to electricity.
+
 
 <img src="media/IMG_0392.resized.JPG">
 <img src="media/IMG_0393.resized.JPG">
