--- a/index.html
+++ b/index.html
@@ -70,7 +70,15 @@ Your browser does not support the video tag.
 
 Find a spot for your digital media frame to eventually go. You'll want a space that is centrally located which gets high traffic and visibility and where you can mount it on a stud or strut (basically into wood, not drywall). And, of course, it will need access to electricity.
 
+<h2><u>Step 2</u></h2>
 
+Since the Pi enclosure doesn't quite fit with our jumper wires and we don't want to solder, we need to make a little room in the enclosure. Use a hacksaw to cut a small section out of the top to allow for our wires to stick out.
+
+<img src="media/IMG_0404.resized.JPG">
+
+<h2><u>Step 3</u></h2>
+
+<!--
 <img src="media/IMG_0392.resized.JPG">
 <img src="media/IMG_0393.resized.JPG">
 <img src="media/IMG_0394.resized.JPG">
@@ -88,7 +96,7 @@ Find a spot for your digital media frame to eventually go. You'll want a space t
 <img src="media/IMG_0408.resized.JPG">
 <img src="media/IMG_0409.resized.JPG">
 <img src="media/IMG_0411.resized.JPG">
-
+-->
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/najoshi/pipresents-next-digital-photo-frame">Pipresents-next-digital-photo-frame</a> is maintained by <a href="https://github.com/najoshi">najoshi</a>.</span>
 
