--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@ Your browser does not support the video tag.
 
 <h2><u>Step 1</u></h2>
 
-Find a spot for your digital media frame to eventually go. You'll want a space that is centrally located which gets high traffic and visibility and where you can mount it on a stud or strut (basically into wood, not drywall). And, of course, it will need access to electricity.
+Find a spot for your digital media frame to eventually go. You'll want a space that is centrally located which gets high traffic and visibility and where you can mount it on a stud or strut (basically into wood, not drywall). And, of course, it will need access to electricity.<p>
 
 <h2><u>Step 2</u></h2>
 
-Since the Pi enclosure doesn't quite fit with our jumper wires and we don't want to solder, we need to make a little room in the enclosure. Use a hacksaw to cut a small section out of the top to allow for our wires to stick out.
+Since the Pi enclosure doesn't quite fit with our jumper wires and we don't want to solder, we need to make a little room in the enclosure. Use a hacksaw to cut a small section out of the top to allow for our wires to stick out.<p>
 
 <img src="media/IMG_0404.resized.JPG">
 
