--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ Download my fork of pipresents-next <a href="https://github.com/najoshi/pipresen
 Now you will connect up the half-size breadboard with our buttons for next, previous, and pause, and the sensor on/off switch. You will be using female-to-male jumper wires. First, insert the pushbuttons so that they straddle the central groove and are spaced equally apart. Make sure the button prongs are inserted fully into the breadboard. Insert a jumper wire for each button into the row of the left prong, where the row is perpendicular to the middle groove. Each row is electrically connected, so it doesn't matter which of the 5 sockets (not including the +/- columns) you put it in, as long as it is in the same row on the same side of the groove. Leave the female ends dangling for now, we will connect them later to the Pi.
 
 <img src="media/IMG_0397.resized.JPG" vspace=20>
+<img src="media/IMG_0397_arrow1.resized.JPG" vspace=20>
 
 Next, insert two more jumper wires into the end of each of the "+" and "-" columns. These will supply our ground and power for our buttons and switches. In order to connect the buttons to the ground column, you will need to create little wire connectors. In order to do this, take a new wire and cut three small pieces out of it. For each piece, slice off the rubber coating at the ends (without cutting the copper wire underneath). Then twist the bare wire ends to make them easier to insert.
 
@@ -102,7 +103,9 @@ Next, insert two more jumper wires into the end of each of the "+" and "-" colum
 <img src="media/IMG_0409.resized.JPG" vspace=20>
 <img src="media/IMG_0411.resized.JPG" vspace=20>
 
-Insert the wires so they connect the other prong of the buttons to the ground (i.e. "-") column.
+Insert the wires so they connect the other prong of the buttons to the ground (i.e. "-") column. Finally, insert the switch into the board on one side of the buttons. Connect the middle prong of the switch to power using another wire connector and connect the right prong to another female-to-male wire.
+
+<img src="media/IMG_0397_arrow2.resized.JPG" vspace=20>
 
 
 <!--
