--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Next, insert two more jumper wires into the end of each of the "+" and "-" colum
 <img src="media/IMG_0409.resized.JPG" vspace=20>
 <img src="media/IMG_0411.resized.JPG" vspace=20>
 
-Insert the wires so they connect the other prong of the buttons to the ground (i.e. "-") column. Finally, insert the switch into the board on one side of the buttons. Connect the middle prong of the switch to power using another wire connector and connect the right prong to another female-to-male wire.
+Insert the wires so they connect the other prong of the buttons to the ground (i.e. "-") column. Finally, insert the switch into the board on one side of the buttons. Connect the middle prong of the switch to power using another wire connector and connect the right prong to another female-to-male wire. Then I covered the wire connections in tape so that they would stay secure... hacky, I know.
 
 <img src="media/IMG_0397_arrow2.resized.JPG" vspace=20>
 
