--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@ Insert the wires so they connect the other prong of the buttons to the ground (i
 <img src="media/IMG_0397_arrow2.resized.JPG" vspace=20>
 
 
+<h2><u>Step 7</u></h2>
+
+Now, we will connect the female ends of the wires to the Pi. Here is a simplified pin layout of the Pi:
+
+<img src="media/Raspberry-Pi-GPIO-Layout-simple.jpg" vspace=20>
+
 <!--
 <img src="media/IMG_0392.resized.JPG">
 <img src="media/IMG_0393.resized.JPG">
