--- a/index.html
+++ b/index.html
@@ -114,6 +114,16 @@ Now, we will connect the female ends of the wires to the Pi. Here is a simplifie
 
 <img src="media/Raspberry-Pi-GPIO-Layout-simple.jpg" vspace=20>
 
+And here are the wires on the breadboard with the corresponding pin numbers of where they connect to:
+
+<img src="media/IMG_0397_pins.resized.JPG" vspace=20>
+
+And, finally, here is a diagram of the Pi pins with the numbers the wires connect to:
+
+<img src="media/gpio-pins-pi2-arrow1.resized.jpg" vspace=20>
+
+So, simply connect the dangling female ends of the wires from the breadboard to the corresponding pin numbers on the Pi.
+
 <!--
 <img src="media/IMG_0392.resized.JPG">
 <img src="media/IMG_0393.resized.JPG">
