--- a/index.html
+++ b/index.html
@@ -124,6 +124,19 @@ And, finally, here is a diagram of the Pi pins with the numbers the wires connec
 
 So, simply connect the dangling female ends of the wires from the breadboard to the corresponding pin numbers on the Pi.
 
+
+<h2><u>Step 8</u></h2>
+
+In this step, we will connect the PIR sensor to the Pi, test out the best settings for it, and mount it on the monitor. First, thread the semi-rigid rubber-coated wire through the holes on the sides of the PIR. This will create a mounting surface. If you have a better way of mounting the sensor without causing electrical interference, then do it, but this is the easiest way I could come up with. Use strong tape to place the sensor like on the back of the monitor next to the "Viewsonic" logo (later we will hot glue gun it in place):
+
+<img src="media/IMG_0394.resized.JPG" vspace=20>
+
+Using female-to-female wires, connect the PIR sensor pins to pins 2, 11, and 6 on the Pi (as shown below):
+
+<img src="media/IMG_0394_arrow1.resized.JPG" vspace=20>
+<img src="media/gpio-pins-pi2-arrow2.resized.jpg" vspace=20>
+
+
 <!--
 <img src="media/IMG_0392.resized.JPG">
 <img src="media/IMG_0393.resized.JPG">
