--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@ And, finally, here is a diagram of the Pi pins with the numbers the wires connec
 So, simply connect the dangling female ends of the wires from the breadboard to the corresponding pin numbers on the Pi. Finally, at this point, you may want to use velcro to attach the Pi enclosure and the breadboard to the monitor.
 
 <img src="media/IMG_0405.resized.JPG" vspace=20>
+
+Below is what the final product will look like, but for now attach the enclosure and board to the places where you see them in the picture.
+
 <img src="media/IMG_0399.resized.JPG" vspace=20>
 
 
