--- a/index.html
+++ b/index.html
@@ -147,6 +147,14 @@ Now, let's test the PIR sensor. You may want to mount the monitor where it is su
 
 <h2><u>Step 9</u></h2>
 
+In this step, we will add an off switch, tape up the Pi, and add the hard drive. The off switch is optional, as the script that contols the switch is totally separate from pipresents. I just wanted a way to easily switch off the Pi by using a switch to run the "shutdown" command. Unfortuately, it only works as on "off" switch, NOT an "on" switch. After you turn off the Pi, in order to turn it back on you have to power cycle it. So it is pretty janky, and thus not necessary. However, if you do want to add the switch, you will use two female-to-female wires and connect them to the switch by jamming the ends into the prongs. The prongs don't exactly fit the connectors, so you will have to force them. Take a look at the pictures below to see how to connect them:
+
+<img src="media/IMG_0399_arrow1.resized.JPG" vspace=20>
+<img src="media/gpio-pins-pi2-arrow3.resized.jpg" vspace=20>
+
+Finally, as shown above, tape up the wires into the Pi so that the hole is covered and the wires are secure. Use hot glue to glue the switch to the monitor. Use velcro to attach the hard drive to the monitor and then connect it to the Pi. Finally, you might need to use some velcro/hot glue combination to keep the HDMI cable from dangling below the monitor.
+
+
 <!--
 <img src="media/IMG_0392.resized.JPG">
 <img src="media/IMG_0393.resized.JPG">
