--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ Now, let's test pipresents with our enhancements. First, make sure you go to the
 
 <h2><u>Step 11</u></h2>
 
-Now, we will make the whole thing production ready. We need to make it so that pipresents starts up automatically and takes up the entire screen, and we need to make some other adjustments for a smooth operation. First, let's change the /boot/config.txt file (using sudo). Uncomment and add/change these lines:<br/>
+Now, we will make the whole thing production ready. We need to make it so that pipresents starts up automatically and takes up the entire screen, and we need to make some other adjustments for a smooth operation. First, let's change the /boot/config.txt file (using sudo). Uncomment and add/change these lines:
 
 <pre>
 <code>
@@ -174,7 +174,7 @@ gpu_mem=128
 </code>
 </pre> 
 
-You will need to reboot the Pi for the changes to take effect. Next, follow the directions in the manual in section 5.4.7.2 to make pipresents work full screen. Then follow the directions in section 9.6 to start pipresents automatically. Make sure to use the command (or something similar):<br/>
+You will need to reboot the Pi for the changes to take effect. Next, follow the directions in the manual in section 5.4.7.2 to make pipresents work full screen. Then follow the directions in section 9.6 to start pipresents automatically. Make sure to use the command (or something similar):
 
 <pre>
 <code>
