--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ sudo /home/pi/pipresents-next-digital-photo-frame/scripts/sd_check.py &
 exit 0
 </code></pre>
 
-You'll need to reboot for the changes to take effect.
+You'll need to reboot for the changes to take effect. Your photo frame should now work full screen and automatically.
 
 <!--
 <img src="media/IMG_0392.resized.JPG">
