--- a/index.html
+++ b/index.html
@@ -187,27 +187,8 @@ sudo /home/pi/pipresents-next-digital-photo-frame/scripts/sd_check.py &
 exit 0
 </code></pre>
 
-You'll need to reboot for the changes to take effect. Your photo frame should now work full screen and automatically.
+You'll need to reboot for the changes to take effect. You may want to mute the sound of the monitor so that you don't have sounds coming from video unless you want it... and then you can unmute for that video and mute again when you are done.a Your photo frame should now work full screen and automatically.
 
-<!--
-<img src="media/IMG_0392.resized.JPG">
-<img src="media/IMG_0393.resized.JPG">
-<img src="media/IMG_0394.resized.JPG">
-<img src="media/IMG_0395.resized.JPG">
-<img src="media/IMG_0396.resized.JPG">
-<img src="media/IMG_0397.resized.JPG">
-<img src="media/IMG_0398.resized.JPG">
-<img src="media/IMG_0399.resized.JPG">
-<img src="media/IMG_0400.resized.JPG">
-<img src="media/IMG_0401.resized.JPG">
-<img src="media/IMG_0402.resized.JPG">
-<img src="media/IMG_0403.resized.JPG">
-<img src="media/IMG_0404.resized.JPG">
-<img src="media/IMG_0405.resized.JPG">
-<img src="media/IMG_0408.resized.JPG">
-<img src="media/IMG_0409.resized.JPG">
-<img src="media/IMG_0411.resized.JPG">
--->
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/najoshi/pipresents-next-digital-photo-frame">Pipresents-next-digital-photo-frame</a> is maintained by <a href="https://github.com/najoshi">najoshi</a>.</span>
       </footer>
